# yggdrasil

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  Makefile  PRD.MD  README.md  behave.ini  conftest.py  continuous_test_runner.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: README.md  sync-feature-spec.py
.cursor/playbooks/edda/: _playbook.md
.cursor/playbooks/rules/: assert-log-story.mdc  do-github-issues.mdc  do-informative-logging.mdc  do-not-go-into-debugging-loops.mdc  do-test-fixture-data-management.mdc  do-validate-api-contracts.mdc  do-write-scenarios.mdc
.cursor/rules/: _ai-context.mdc  add-logging.mdc  do-add-todos-for-incomplete-items.mdc  do-check-previous-commits.mdc  do-continuous-testing.mdc  do-fix-tests.mdc  do-follow-commit-convention.mdc  do-import-on-module-level.mdc  do-informative-logging.mdc  do-look-via-human-eye.mdc  do-plan-before-doing.mdc  do-pull-frequently.mdc  do-runner.mdc  do-skeletons-first.mdc  do-small-increments.mdc  do-test-first.mdc  do-test-fixture-data-management.mdc  do-update-tests-after-bugfixing.mdc  do-write-concise-methods.mdc  never-delete-mindlessly.mdc  pytest.mdc  tooltips.mdc
.github/workflows/: build-and-deploy.yml  promote.yml
api/: serializers.py  urls.py  views.py
core/: llm.py  middleware.py  urls.py
docs/: conventions.md
docs/architecture/: CICD_REQUIREMENTS.md  DTA-01-requirements.md  INFRA_REQUIREMENTS.md  SAO.md  test-architecture.md
docs/features/: CATALOG.md  ESM_HANDOFF.md  environment.py  user_journey.md
docs/features/act-0-auth/: auth-login.feature  auth-token.feature
docs/features/act-1-ratatosk/: munin-briefing.feature  ratatosk-bootstrap.feature  ratatosk-config.feature  ratatosk-discovery.feature  ratatosk-model-summary.feature  ratatosk-scout.feature
docs/features/act-1-views/: view-browse.feature
docs/features/act-10-metamodel/: diagram-list.feature  package-list.feature  stereotype-list.feature
docs/features/act-2-elements/: element-list-find.feature
docs/features/act-2-view/: view-browse.feature  view-export.feature  view-history.feature
docs/features/act-3-element/: element-create.feature  element-delete.feature  element-edit.feature  element-list.feature  element-view.feature
docs/features/act-4-relationship/: relationship-create.feature  relationship-delete.feature  relationship-edit.feature  relationship-list.feature  relationship-view.feature
docs/features/act-5-changesets/: changeset-list-find.feature
docs/features/act-5-mcp/: mcp-changeset.feature  mcp-query.feature  mcp-write.feature
docs/features/act-6-chat/: chat-assist.feature
docs/features/act-6-cicd/: ratatosk-update.feature
docs/features/act-7-changeset/: changeset-list.feature  changeset-view.feature
docs/features/act-8-chat/: chat-munin.feature
docs/features/act-9-ratatosk_run/: ratatosk_run-list.feature  ratatosk_run-view.feature
docs/features/steps/: assertion_steps.py  auth_steps.py  cli_steps.py  common_steps.py  dialog_steps.py  discovery_steps.py  form_steps.py  http_steps.py  mcp_steps.py  munin_steps.py  navigation_steps.py  table_steps.py
docs/features/support/: __init__.py  pages.py
docs/lessons_learned/: log.yaml
docs/plans/: AUTH-TOKEN-1-snippet-enhancement.md  RATATOSK-CLI-MCP-HANDOFF_IMPLEMENTATION_PLAN.md  RATATOSK-SPEC-REALIGNMENT-PLAN.md
docs/plans/act-2-view-browser/: INDEX.md  README.md  lessons_learned.md
docs/plans/bootstrap-mvp/: INDEX.md
docs/plans/iterations/: ITER-20260716-1300-act-0-foundation.yaml  ITER-20260717-1300-act-0-agents-mcp.yaml  pin-orient-20260716.md  pin-orient-20260717.md
docs/plans/pip-sc02-dual-tier-rescan/: activity-200-dta19-proposed.md  artifact-21-proposed.md
docs/process/: ESM_READING_LIST.md  ESTIMATION.md  SOFTWARE_PROCESS.md
docs/ux/: IA_guidelines.md
docs/ux/2_dialogue-maps/: screen-flow.drawio  screen-flow.md
features/: CATALOG.md
features/at/: environment.py  health.feature
features/at/steps/: __init__.py  assertion_steps.py  auth_steps.py  common_steps.py  dialog_steps.py  form_steps.py  http_steps.py  navigation_steps.py  table_steps.py
features/e2e/: environment.py
features/e2e/steps/: __init__.py  assertion_steps.py  auth_steps.py  common_steps.py  dialog_steps.py  form_steps.py  navigation_steps.py  table_steps.py
features/support/: environment.py  pages.py
graph/: admin.py  apps.py  models.py  services.py
graph/migrations/: 0001_initial.py
infra/: app.py  requirements.txt
infra/stacks/: yggdrasil_stack.py
mcp_server/: server.py
mockups/: __init__.py  urls.py  views.py
ratatosk/: README.md  cli.py  config.py  mcp_client.py  pyproject.toml
ratatosk/discovery/: __init__.py  candidates.py  exclude.py  limits.py  model_summary.py  prefilter.py  prompts.py  runner.py  scripted_llm.py  synthesize.py
ratatosk/ratatosk/: __init__.py  cli.py  client.py
ratatosk/tests/: test_cli_click.py  test_config_loader.py  test_discovery_candidates.py  test_discovery_cleanup.py  test_discovery_limits.py  test_discovery_prefilter.py  test_discovery_synthesize.py  test_dual_tier_discovery.py  test_exclude_patterns.py
scripts/: deploy-idle.sh  deploy-staging.sh  promote-prod.sh  swap.sh
src/yggdrasil/: __init__.py  asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
src/yggdrasil/api/: apps.py  urls.py
src/yggdrasil/auth/: admin.py  apps.py  authentication.py  models.py  services.py  urls.py  views.py
src/yggdrasil/changeset/: admin.py  apps.py  (+4 more)
templates/: base.html
templates/web/: changeset_list.html  chat_assist.html  element_list.html  view_browse.html  welcome.html
tests/: test_smoke.py
tests/e2e/: environment.py  landing.feature  step_helpers.py
tests/fixtures/: CATALOG.md  seed.json  view_browser.py
tests/infra/: __init__.py
tests/integration/: test_e2e_real_bootstrap_mcp_query.py  test_journey_bootstrap_then_update.py
web/: mockup_urls.py  urls.py  views.py
yggdrasil/: settings.py  urls.py  wsgi.py
(+432 files in other folders)
