[project]
name = "yggdrasil"
version = "0.1.0"
description = "AI-augmented architecture knowledge-graph platform"
requires-python = ">=3.14"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "django>=5.1,<6",
    "django-environ>=0.11",
    "djangorestframework>=3.15",
    "django-extensions>=3.2",
    # Database driver
    "psycopg[binary]>=3.1",
    # Async tasks
    "celery[redis]>=5.4",
    "redis>=5.2",
    # MCP facade
    "fastmcp>=2.0",
    # LLM clients
    "anthropic>=0.32",
    "openai>=1.40",
    "httpx>=0.27",
    # Observability
    "structlog>=24.4",
    # HTMX & templates
    "django-htmx>=1.19",
    "whitenoise>=6.7",
    # Utilities
    "python-slugify>=8.0",
    "pydantic>=2.8",
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "faker>=28.0",
    "factory-boy>=3.3",
    "behave>=1.2.6",
    "behave-django>=1.4",
    "playwright>=1.46",
    "watchdog>=5.0",

    # Linting & formatting
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs>=5.1",
    "djangorestframework-stubs>=3.15",
    "types-redis>=4.6",

    # Pre-commit & commits
    "pre-commit>=3.8",
    "commitizen>=3.29",

    # Security
    "pip-audit>=2.7",
    "debugpy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yggdrasil"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "faker>=28.0",
    "factory-boy>=3.3",
    "behave>=1.2.6",
    "behave-django>=1.4",
    "playwright>=1.46",
    "watchdog>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs>=5.1",
    "djangorestframework-stubs>=3.15",
    "types-redis>=4.6",
    "pre-commit>=3.8",
    "commitizen>=3.29",
    "pip-audit>=2.7",
    "debugpy>=1.8.21",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101", "ANN"]
"*/migrations/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["mypy_django_plugin.main"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["*.migrations.*", "*.tests.*", "tests.*", "conftest"]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "yggdrasil.settings"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "yggdrasil.test_settings"
pythonpath = ["src"]
testpaths = ["src", "docs/features", "tests"]
addopts = "--strict-markers -q --log-file=tests.log --log-file-level=INFO"
markers = [
    "unit: pure unit tests, no DB",
    "integration: tests requiring DB / services",
    "acceptance: acceptance tests (behave BDD)",
    "e2e: end-to-end browser tests (slow)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
