[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ratatosk"
version = "0.1.0"
description = "Yggdrasil ingestion CLI — HTTP client to REST API"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "click>=8.1"]

[project.scripts]
ratatosk = "ratatosk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ratatosk*"]
