[project]
name = "ratatosk"
version = "0.1.0"
description = "Yggdrasil field agent CLI — bootstraps a codebase into the knowledge graph"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.8",
    "pydantic>=2.8",
]

[project.scripts]
ratatosk = "ratatosk.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
